alignment fixed
btn-option alignment fixed in messages

--- a/css/Quiet.css
+++ b/css/Quiet.css
@@ -2556,3 +2556,7 @@ div.platform-osx .theme-light+span .user-settings-modal .tab-bar.SIDE .tab-bar-i
 	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,.16);
     box-shadow: 0 1px 3px rgba(0,0,0,.16);
 }
+.message-group .btn-option {
+    width: 22px;
+    height: 22px;
+}
